--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('./components/background3.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
 
 .App-header {
   background-color: #282c34;
@@ -26,6 +34,9 @@
 
 .App-link {
   color: #61dafb;
+}
+i{
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
